# VoiceTranscript

./: .gitignore  README.md  Voice_Transcript_Fahrplan.md  settings.gradle.kts
.github/workflows/: android-build.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/voicetranscript/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voicetranscript/: AudioLanguage.kt  MainActivity.kt  UriUtils.kt  VoiceTranscriptApp.kt  WhisperModel.kt
app/src/main/java/com/voicetranscript/data/audio/: AudioConverter.kt
app/src/main/java/com/voicetranscript/data/filesystem/: AudioFileManager.kt  WhisperModelManager.kt
app/src/main/java/com/voicetranscript/data/remote/: ModelDownloader.kt
app/src/main/java/com/voicetranscript/data/repository/: SettingsRepository.kt
app/src/main/java/com/voicetranscript/di/: NetworkModule.kt  WhisperModule.kt
app/src/main/java/com/voicetranscript/ui/components/: FileSelector.kt  LanguageSelector.kt
app/src/main/java/com/voicetranscript/ui/screens/: SettingsScreen.kt
app/src/main/java/com/voicetranscript/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/voicetranscript/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/voicetranscript/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
whisper-jni/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
whisper-jni/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
whisper-jni/src/main/java/com/voicetranscript/ndk/: WhisperLib.kt
